src/objects/Repayment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <referenceTo>Credit__c</referenceTo>
        <relationshipLabel>Repayments</relationshipLabel>
        <relationshipName>Repayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Repayment</label>
    <nameField>
        <label>Repayment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>